--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 .env
 
 # pasta com imagens do banco de dados
-/public/uploads/*
-!/public/uploads/.gitkeep
+/src/public/uploads/*
+!/src/public/uploads/.gitkeep
